GitVersion1/objects/DH_Account__c.object
<CustomObject>
    <description>******NO LONGER USED - DELETE</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name from SFDC Account record</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Record__c</fullName>
        <displayFormat>GR-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Golden Record #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Legal Entity Name -&gt; From Account Record</description>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DH Account</label>
    <nameField>
        <displayFormat>DH-{000000}</displayFormat>
        <label>DH Account #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DH Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>